--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
   "inbounds": [
     {
       "port": 8080,
-      "protocol": "vmess",
+      "protocol": "vless",
       "settings": {
         "clients": [
           {
-            "id": "",
+            "id": "k2",
             "level": 0
           }
         ],
@@ -15,15 +15,14 @@
       "streamSettings": {
         "network": "ws",
         "wsSettings": {
-          "path": "/cdn-cgi/trace"
+          "path": "/k2"
         }
       }
     }
   ],
   "outbounds": [
     {
-      "protocol": "freedom",
-      "settings": {}
+      "protocol": "freedom"
     }
   ]
 }
